More lang tags added.

--- a/index.html
+++ b/index.html
@@ -689,14 +689,14 @@
       <p>Emphasis in modern Ethiopic writing will employ every emphasis device available from the available publishing technology (e.g. underline, slant, embolden, letter size, letter outline, background shapes, etc.). The practice however is idiosyncratic and inconsistently applied leading to debate and disagreement within the publishing community.</p>
       <p>The following subsections present a proposed best practice of the authors.</p>
       <section id="emphasis_within_prose">
-    <h4>Emphasis Within Prose</h4>
-    <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
-    <p>[TBD: Examples Needed]</p>
-    <div class="issues">
+        <h4>Emphasis Within Prose</h4>
+        <p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p>
+        <p>[TBD: Examples Needed]</p>
+        <div class="issues">
           <p>Issues/Questions:</p>
           <ol>
-        <li>How much slant when an italic designed typeface is not available? 10% is suggested.</li>
-      </ol>
+            <li>How much slant when an italic designed typeface is not available? 10% is suggested.</li>
+          </ol>
         </div>
     <!--
       <p><span style="-moz-transform: scale(1) rotate(0deg) translate(0px, 0px) skew(10deg, 0deg);
@@ -716,35 +716,36 @@
           transform: scale(1) rotate(0deg) translate(0px, 0px) skew(20, 0deg);">ልዩ</span>
       </p>
 -->
-  </section>
+      </section>
 
-  <section id="ecclesiastical_emphasis">
-    <h4>Ecclesiastical Emphasis</h4>
-    <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be colored in red.  The practice is context dependent and a word that will appear in red in one sentence may not be red in the next (or elsewhere in the same sentence).</p>
-    <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600"/>
-      <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
-    </figure>
-    <div class="issues">
-      <p>Issues/Questions:</p>
-      <ol>
-        <li>What shade of red?</li>
-        <li>What is the preferred substitute for red when only monochrome publishing is available?</li>
-      </ol>
-    </div>
-  </section>
+      <section id="ecclesiastical_emphasis">
+        <h4>Ecclesiastical Emphasis</h4>
+        <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be colored in red.  The practice is context dependent and a word that will appear in red in one sentence may not be red in the next (or elsewhere in the same sentence).</p>
+        <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600"/>
+          <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
+        </figure>
+        <div class="issues">
+          <p>Issues/Questions:</p>
+          <ol>
+            <li>What shade of red?</li>
+            <li>What is the preferred substitute for red when only monochrome publishing is available?</li>
+          </ol>
+        </div>
+      </section>
 
-  <section id="emphasis_with_wordspace">
-    <h4>Emphasis With Ethiopic Wordspace</h4>
-    <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. </p>
-    <div class="issues">
-      <p>Issues/Questions:</p>
-      <ol>
-        <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge’ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
-      <li>Related: Does word emphasis include a following punctuation?</li>
-      </ol>
-    </div>
-  </section>
-  </section>
+      <section id="emphasis_with_wordspace">
+        <h4>Emphasis With Ethiopic Wordspace</h4>
+        <p>As a rule, a wordspace following a word that is emphasized in any way (color, bold, italic, underline, etc.) shall receive the same emphasis. This is in keeping with the Ge’ez literature tradition. </p>
+        <div class="issues">
+          <p>Issues/Questions:</p>
+          <ol>
+            <li>Does this rule make aesthetic sense in full justification with wordspace in centered positioning style? In Ge’ez manuscripts no issue arrises since little or no white space appears between the wordspace and boundary words.  The elastic space around wordspace may stretch considerably in typeset documents, under justification, where continuation of the emphasis may appear peculiar after some stretching threshold width.</li>
+          <li>Related: Does word emphasis include a following punctuation?</li>
+          </ol>
+        </div>
+      </section>
+
+    </section>
 
   <section id="ethiopic_abbreviation_formation">
     <h3>Abbreviation Formation</h3>
@@ -752,12 +753,12 @@
          Single word abbreviation that applies a right side truncation (vs mid) will apply a "." as the abbreviation maker.
          In a multi-word abbreviations the last word may remain whole. Two letter words are only abbreviated in a multi-word abbreviation. </p>
     <p><strong>Examples:</strong><br/>
-         <span style="text-decoration: underline;">Single Word</span><br/>
-         <span lang="am" style="margin-left:40px;"> ሚኒስትር ⇒ ሚ/ር</span><br/>
-         <span lang="am" style="margin-left:40px;"> ሆስፒታል ⇒ ሆ/ል</span><br/>
-         <span lang="am" style="text-decoration: underline;">Multi Word</span><br/>
-         <span lang="am" style="margin-left:40px;"> ጠቅላይ ሚኒስትር ⇒ ጠ/ሚ/ር</span><br/>
-         <span lang="am" style="margin-left:40px;"> ኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተ ክርስቲያን ⇒ ኢ/ኦ/ተ/ቤ/ክ</span></p>
+       <span style="text-decoration: underline;">Single Word</span><br/>
+       <span lang="am" style="margin-left:40px;"> ሚኒስትር ⇒ ሚ/ር</span><br/>
+       <span lang="am" style="margin-left:40px;"> ሆስፒታል ⇒ ሆ/ል</span><br/>
+       <span lang="am" style="text-decoration: underline;">Multi Word</span><br/>
+       <span lang="am" style="margin-left:40px;"> ጠቅላይ ሚኒስትር ⇒ ጠ/ሚ/ር</span><br/>
+       <span lang="am" style="margin-left:40px;"> ኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተ ክርስቲያን ⇒ ኢ/ኦ/ተ/ቤ/ክ</span></p>
 
     <div class="issues">
       <p>Issues/Questions:</p>
@@ -771,7 +772,7 @@
         <li>Of interest: when are abbreviations first found in Ethiopic writing and in what form?</li>
       </ol>
     </div>
-          <!-- An extreme example with 11 levels: በኢ/ኦ/ተ/ቤ/ክ/ሰ/ት/ቤ/ማ/መ/ማኅበረ ቅዱሳን  via http://eotcmk.org/site/component/contact/?task=view&contact_id=1 -->
+    <!-- An extreme example with 11 levels: በኢ/ኦ/ተ/ቤ/ክ/ሰ/ት/ቤ/ማ/መ/ማኅበረ ቅዱሳን  via http://eotcmk.org/site/component/contact/?task=view&contact_id=1 -->
   </section>
 
   <section id="kerning_pairs_and_ligatures">
@@ -810,7 +811,7 @@
          <li>A letter.</li>
          <li>A number.</li>
          <li>A tab.</li>
-         <li>A non-terminal or non-joining punctuation (such as  « ‹ “ $ ( [ { ). Conversely, may not start with a terminal or joining punctuation (such as: ? ! ¡ ።) ] } / % – ” › » ፡ ፣ ፤ ፥ ፦ space, math operators)</li>
+         <li>A non-terminal or non-joining punctuation (such as  « ‹ “ $ ( [ { ). Conversely, may not start with a terminal or joining punctuation (such as: ? ! ¡ <span lang="am">።</span>) ] } / % – ” › » <span lang="am">፡ ፣ ፤ ፥ ፦</span> space, math operators)</li>
        </ul>
        <div class="issues">
        <p>Issues/Questions:</p>
@@ -899,7 +900,7 @@
 
     <section id="spacing_threshold_following_full_stop">
       <h5>Spacing Threshold Following Full Stop</h5>
-      <p>In the regular mode of Ethiopic justification (both  forms) <span class="uname">U+1362 ETHIOPIC FULL STOP</span> [<span lang="am">።</span>] will be treated equally with all other punctuation symbols.  In a second mode, the Ethiopic full stop will have special spacing rules applied to it whereby more separation space is allowed following the symbol and the start of the next word.  In a sense, the right side space of the full stop is “more elastic” than in the regular mode.  The elasticity rule and the visual effect are similar to that of the final line of a fully justified paragraph in Western text.  When the final line of a paragraph of Latin script crosses a certain horizontal threshold, the line will become fully justified. Below that threshold the line will appear left aligned.  The same rule appears to be applied to the Ethiopic full stop but on any line of the paragraph.  An illustration of this sub-mode is depicted in the following: </p>
+      <p>In the regular mode of Ethiopic justification (both forms) <span class="uname">U+1362 ETHIOPIC FULL STOP</span> [<span lang="am">።</span>] will be treated equally with all other punctuation symbols.  In a second mode, the Ethiopic full stop will have special spacing rules applied to it whereby more separation space is allowed following the symbol and the start of the next word.  In a sense, the right side space of the full stop is “more elastic” than in the regular mode.  The elasticity rule and the visual effect are similar to that of the final line of a fully justified paragraph in Western text.  When the final line of a paragraph of Latin script crosses a certain horizontal threshold, the line will become fully justified. Below that threshold the line will appear left aligned.  The same rule appears to be applied to the Ethiopic full stop but on any line of the paragraph.  An illustration of this sub-mode is depicted in the following: </p>
       <figure> <img src="images/corpus-samples/KWK-Page-159-Cropped.png" alt=" " width="800" height="297" />
         <figcaption>Justification Sample from  Maṣḥafa Sawāsew, Page 159 (Kifle, 1955 (1948 EC))</figcaption>
       </figure>
@@ -990,7 +991,7 @@
     <section id="counter_suffix">
       <h4>Ordered List Counter Suffix</h4>
       <p>In Ethiopic ordered lists a number of symbols are used for the counter suffix.
-         For example: "/" , "<span lang="am">፦</span>" , "." , ")" and even "፡" (Ethiopic Wordspace).</p>
+         For example: "/" , "<span lang="am">፦</span>" , "." , ")" and even "<span lang="am">፡</span>" (Ethiopic Wordspace).</p>
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
