More lang attributes added.

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
          Usage rules are as follows:</p>
       <dl>
         <dt lang="am">፣ - ነጠላ ሠረዝ</dt>
-        <dd><span class="uname">U+1363 ETHIOPIC COMMA</span> <span lang="am">(አማ/ ነጠላ ሠረዝ, ትግ/ ንጽል ሰረዝ)</span> is used as a comma in Ethiopian practices and as a semicolon in Eritrea. ፣ will also be
+        <dd><span class="uname">U+1363 ETHIOPIC COMMA</span> <span lang="am">(አማ/ ነጠላ ሠረዝ, ትግ/ ንጽል ሰረዝ)</span> is used as a comma in Ethiopian practices and as a semicolon in Eritrea. “<span lang="am">፣</span>” will also be
               used in Ge’ez writing as a semicolon (is this a modern usage or classic?).
               <span class="uname">U+1364 ETHIOPIC SEMICOLON</span>, <span lang="am">፤</span>, in turn is used as a colon in Eritrean writing (verify).</dd>
         <dt lang="am">፥ - ንዑስ ሠረዝ</dt>
@@ -1550,35 +1550,37 @@
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li><span lang="am">ቨ</span> appears to be equally included and omitted in አበገደ lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
-              <li>How is end of sequence handled in አበገደ lists?
+          <li><span lang="am">ቨ</span> appears to be equally included and omitted in አበገደ lists. Stakeholders should be resolve to include or exclude it, or define two list styles (with and without ቨ).</li>
+          <li>How is end of sequence handled in <span lang="am">አበገደ</span> lists?
             <ol type="a">
-                  <li>Sequence as radix, e.g.: <span lang="am">... ጰ ... ፐ ... አአ ... አበ ...</span></li>
-                  <li>Columnar radix, e.g.: <span lang="am">... ጰ ... ፐ ... አቡ ... አጉ ...</span></li>
-                  <li>Wrap to next column, e.g.: <span lang="am">... ጰ ... ፐ ... ቡ ... ጉ ...</span></li>
-                  <li>With any approach, how is the end of matrix handled?</li>
-                </ol>
-          </li>
+              <li>Sequence as radix, e.g.: <span lang="am">... ጰ ... ፐ ... አአ ... አበ ...</span></li>
+              <li>Columnar radix, e.g.: <span lang="am">... ጰ ... ፐ ... አቡ ... አጉ ...</span></li>
+              <li>Wrap to next column, e.g.: <span lang="am">... ጰ ... ፐ ... ቡ ... ጉ ...</span></li>
+              <li>With any approach, how is the end of matrix handled?</li>
             </ol>
+          </li>
+        </ol>
       </div>
-        </section>
+    </section>
+
     <section id="inlined_continuation">
-          <h4>Inline End of List Continuation</h4>
-          <p>An observed formatting practice is the start of a following paragraph inline with the last list item.
-        The paragraph may flow immediately from the last item, or some indentation may be applied. This practice is illustrated in the following figure:</p>
-          <figure id="end_of_list_inlined_paragraph_continuation"> <img src="images/end-of-list-inline-continuation.png"  alt=" " />
+      <h4>Inline End of List Continuation</h4>
+      <p>An observed formatting practice is the start of a following paragraph inline with the last list item.
+         The paragraph may flow immediately from the last item, or some indentation may be applied. This practice is illustrated in the following figure:</p>
+      <figure id="end_of_list_inlined_paragraph_continuation"> <img src="images/end-of-list-inline-continuation.png"  alt=" " />
         <figcaption>Sample for inlined paragraph continuation at end of list.</figcaption>
       </figure>
-          <div class="issues">
+      <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-              <li>Is this an older style? Idiosyncratic to a few authors? The desired norm?</li>
-              <li>When appropriate, what is the width of the paragraph offset (if any) from the final list item?</li>
-            </ol>
+          <li>Is this an older style? Idiosyncratic to a few authors? The desired norm?</li>
+          <li>When appropriate, what is the width of the paragraph offset (if any) from the final list item?</li>
+        </ol>
       </div>
-        </section>
-  </section>
     </section>
+
+    </section>
+  </section>
 
   <section id="h_pages">
     <h2>Layout &amp; Pages</h2>
