Two more lang attributes added.

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               comma glyph by some modern writers writing in other languages. <span lang="am">፥</span> is the default comma in most Amharic bibles, likely in keeping with
               the Ge’ez Bible that the Amharic would have been translated from.  Some modern Bible translations into Amharic, as well as other religious
               literature, will use <span lang="am">፣</span> as the default comma in prose but maintain <span lang="am">፥</span> for passage references, e.g. <span lang="am">ማቴ4፥23 , ዮሐ13፥16 ,</span> etc. Given this
-              common usage in religious materials “ecclesiastical comma” is a practical English term for referring to the ፥ glyph variant.  Kidane Wolde Kifle and Desta Tekle Wolde note the equivalence of the two commas. </dd>
+              common usage in religious materials “ecclesiastical comma” is a practical English term for referring to the <span lang="am">፥</span> glyph variant.  Kidane Wolde Kifle and Desta Tekle Wolde note the equivalence of the two commas. </dd>
         <dt lang="am">፡ - ንዑስ ነጥብ</dt>
         <dd><span class="uname">U+1361 ETHIOPIC WORDSPACE</span> <span lang="am">(አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ)</span> in keeping with Ge’ez heritage, is used as the word separator (i.e. space) in the classical writing practices
               of both Eritrean and Ethiopia.  In modern Eritrean writing practices <span class="uname">ETHIOPIC WORDSPACE</span> will be used in the role of a comma (illustrated in Figure <a href="#ecclesiastical_emphasis_sample"></a>).
@@ -464,7 +464,7 @@
          <li>No other punctuation may border Ethiopic Wordspace.</li>
          <li>A new line may follow, but not precede, an Ethiopic Wordspace (a wordspace may not start a new line).</li>
          <li>Whitespace may not follow or precede an Ethiopic Wordspace (note, this does not include stretchable space used in line justification).</li>
-         <li>An Ethiopic Wordspace followed by another Ethiopic Wordspace must be interpreted as an Ethiopic Full Stop (።).</li>
+         <li>An Ethiopic Wordspace followed by another Ethiopic Wordspace must be interpreted as an Ethiopic Full Stop (<span lang="am">።</span>).</li>
        </ul>
        <div class="issues">
          <p>Issues/Questions:</p>
@@ -517,7 +517,7 @@
 
     <section id="ethiopic_gemination_mark_positioning">
       <h4>Ethiopic Gemination Mark <span lang="am">(ጥበቅ)</span> Vertical Positioning</h4>
-      <p>The Ethiopic gemination mark, <span lang="am">ጥበቅ,</span> is almost universally found at a fixed height above the baseline in typeset literature. The mark’s position must
+      <p>The Ethiopic gemination mark, <span lang="am">ጥበቅ</span>, is almost universally found at a fixed height above the baseline in typeset literature. The mark’s position must
          then be fixed so that it remains above the tallest Ethiopic letter symbol; this produces a variable height gap between the top of the letter and the mark.
          Conversely, when the symbol is hand written (often above typeset text) the mark will be found at a variable height above the baseline and demonstrating
          a fixed height above the letter symbol.
