added missing </span> detected by html validator.

--- a/index.html
+++ b/index.html
@@ -1881,7 +1881,7 @@
       </tr>
       <tr id="term.table-of-contents">
         <td>Table of Contents</td>
-        <td lang="am"><span lang="am">ማውጫ </td>
+        <td lang="am"><span lang="am">ማውጫ </span></td>
         <td lang="ti">TBD</td>
         <td>Same as “<span lang="am">መክሥተ አርእስት</span>”?</td>
       </tr>
