Added note DTW's preface page numbering convention.

--- a/index.html
+++ b/index.html
@@ -1611,7 +1611,7 @@
 
     <section id="h_preface_page_numbering">
     <h3>Preface Page Numbering</h3>
-    <p><em>Note the practice of using two numeral systems for page numbering in books.  For example in preface paging Ethiopic numerals may be used in documents where page numbers use western numerals.  This is analagous to the practice in western literature of using Roman numerals in preface numbering and western numerals afterwards. A general statement should be made in this document that Ethiopic Numerals should Replace Roman Numerals where the later is a default.</em></p>
+    <p><em>TBD: Note the practice of using two numeral systems for page numbering in books.  For example in preface paging Ethiopic numerals may be used in documents where page numbers use western numerals.  This is analagous to the practice in western literature of using Roman numerals in preface numbering and western numerals afterwards. A general statement should be made in this document that Ethiopic Numerals should Replace Roman Numerals where the later is a default. Additionally, note Desta Tekle Wold's <span lang="am">አበገደ</span> based preface numbering in "<span lang="am">ዐዲስ፡ያማርኛ፡መዝገበ፡ቃላት።</span>".</em></p>
     </section>
 
     <section id="h_document_structure">
